working on mobile issue

--- a/style.css
+++ b/style.css
@@ -109,4 +109,7 @@ img {
   h1 {
     font-size: 40px;
   }
+  h3 {
+    display: none;
+  }
 }
